--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,13 @@
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="input-text"
         type="text"
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="submit" type="submit">Search</button>
     </form>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
