--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,18 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        class="input-text"
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button class="submit" type="submit">Search</button>
-    </form>
+    <div class="form-wrapper">
+      <form class="search-form" id="search-form">
+        <input
+          class="input-text"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="submit" type="submit">Search</button>
+      </form>
+    </div>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
